--- a/.gitignore
+++ b/.gitignore
@@ -107,6 +107,11 @@ ENV/
 env.bak/
 venv.bak/
 
+# Environment files
+*.env
+.env.*
+!.env.template
+
 # Spyder project settings
 .spyderproject
 .spyproject
