Cloudflare Pages設定の修正とWranglerエラーの解決
 設定ファイルの最適化:
- 不適切なwrangler.tomlを削除（Cloudflare Pagesでは不要）
- 不要なbuild.shスクリプトを削除
- package.jsonの詳細情報を追加

 ドキュメント更新:
- Cloudflare Pages専用の設定ガイド作成
- 正しいビルド設定の明記
- トラブルシューティング情報の追加

 Cloudflare Pagesでの推奨設定:
- Framework: None (Custom)
- Build command: pip install -r requirements.txt
- Build output: . (ルートディレクトリ)
- 環境変数での機能制御

--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
+  "name": "ruri-aituber",
+  "version": "0.1.0",
+  "description": "AITuber Ruri - Streamlit WebUI",
   "scripts": {
     "build": "pip install -r requirements.txt",
-    "start": "streamlit run webui/app_beta.py --server.port=${PORT:-8501} --server.address=0.0.0.0"
+    "start": "streamlit run webui/app_beta.py --server.port=${PORT:-8501} --server.address=0.0.0.0",
+    "dev": "streamlit run webui/app_beta.py"
   },
   "engines": {
     "python": "3.11.x"
-  }
+  },
+  "keywords": ["streamlit", "aituber", "ai", "vtuber"],
+  "author": "ozaki-taisuke",
+  "license": "MIT"
 }
