Streamlit Cloud依存関係エラーの修正とエラーハンドリング強化
 requirements.txt の最適化:
- 問題のあるパッケージをコメントアウト
- opencv-python  opencv-python-headless に変更
- 最小限依存関係ファイル (requirements-minimal.txt) 追加
- Streamlit Cloud環境に最適化

 エラーハンドリングの強化:
- AI機能、画像処理、プロット機能の条件付き読み込み
- 依存関係がない場合のフォールバック機能実装
- 部分的機能でもアプリが起動するよう改善

 機能状態の可視化:
- 利用可能機能の動的表示
- エラー時の適切なメッセージ表示
- モック機能による最小限の動作保証

 Streamlit設定の最適化:
- Streamlit Cloud用の設定調整
- テーマとUIの統一
- パフォーマンス向上設定

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,18 +1,24 @@
+[theme]
+primaryColor = "#667eea"
+backgroundColor = "#FFFFFF"
+secondaryBackgroundColor = "#f0f2f6"
+textColor = "#262730"
+
 [server]
 port = 8501
-address = "localhost"
+address = "0.0.0.0"
+headless = true
 enableCORS = false
 enableXsrfProtection = false
 
 [browser]
 gatherUsageStats = false
-serverAddress = "localhost"
-serverPort = 8501
 
 [runner]
 magicEnabled = true
 
 [client]
+toolbarMode = "minimal"
 showErrorDetails = true
 
 [global]
