統一環境システム実装完了 - デプロイ準備完了
 新機能:
- 4段階認証システム (PUBLIC/BETA/DEVELOPER/ADMIN)
- 統一WebUI (webui/app_unified.py)
- 動的機能切り替え
- Streamlit Cloud対応設定

 技術改善:
- requirements.txt軽量化
- 環境変数Secrets対応
- エラーハンドリング強化
- レスポンシブデザイン

 統合完了:
- β版、Web版、本番環境  単一システム
- 運用コスト削減メンテナンス効率化

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,8 +1,8 @@
 [theme]
-primaryColor = "#667eea"
-backgroundColor = "#FFFFFF"
-secondaryBackgroundColor = "#f0f2f6"
-textColor = "#262730"
+primaryColor = "#6366f1"
+backgroundColor = "#0f172a"
+secondaryBackgroundColor = "#1e293b"
+textColor = "#e2e8f0"
 
 [server]
 port = 8501
@@ -19,7 +19,11 @@ magicEnabled = true
 
 [client]
 toolbarMode = "minimal"
-showErrorDetails = true
+showErrorDetails = false
 
 [global]
 developmentMode = false
+
+[logger]
+level = "info"
+messageFormat = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
