--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,34 @@
+# Streamlit統一環境用 requirements.txt
+# 軽量かつ安定したデプロイメント用設定
+
+# 必須フレームワーク
 streamlit>=1.28.0
+
+# データ処理 (基本)
 numpy>=1.24.0
 pandas>=2.0.0
+
+# 画像処理
 pillow>=10.0.0
-plotly>=5.17.0
-requests>=2.31.0
 
-# OpenAI (オプション)
-openai>=0.28.0
-
-# OpenCV (軽量版を使用)
+# 軽量画像処理 (OpenCV代替)
 opencv-python-headless>=4.8.0
 
-# WebSocket (オプション - 必要な場合のみ)
-# websocket-client>=1.6.0
+# 可視化
+plotly>=5.17.0
 
-# OBS連携 (ベータ版では無効)
+# HTTP通信
+requests>=2.31.0
+
+# 型ヒント (Python < 3.10 対応)
+typing-extensions>=4.5.0
+
+# オプション機能 - デプロイ時にエラーが発生する場合はコメントアウト
+# OpenAI API (AI機能用)
+# openai>=0.28.0
+
+# OBS連携 (上級機能)
 # obs-websocket-py>=0.5.3
 
-# GPT-OSS (オプション - インストールできない場合は除外)
-# gpt-oss>=0.0.6
-# openai-harmony>=0.1.0
-
-# Ollama (オプション - インストールできない場合は除外)
+# Ollama (ローカルAI)
 # ollama>=0.1.0
