セキュリティ強化実装完了 - 機密情報の完全保護
 セキュリティ対策:
- ハードコーディングされたパスワードAPIキーを完全削除
- .gitignore強化（機密情報除外パターン追加）
- 環境変数Streamlit Secrets優先の設定システム

 動的設定管理システム:
- src/secure_config.py: 暗号化ベースの設定管理
- bcryptパスワードハッシュ化
- Fernet APIキー暗号化
- 管理者UI: リアルタイム設定変更

 デプロイメント最適化:
- cryptography/bcryptをオプション依存に
- 軽量デプロイ対応（基本機能は暗号化なしでも動作）
- graceful degradation実装

 本番運用準備:
- Streamlit Cloud Secrets設定ガイド
- セキュリティベストプラクティス文書化

--- a/.gitignore
+++ b/.gitignore
@@ -153,5 +153,26 @@ ehthumbs.db
 Thumbs.db
 
 # Project specific
+# 機密情報
+.env
+*.env
+*.env.local
+*.env.production
+*.env.development
+.streamlit/secrets.toml
+config/secrets.json
+src/secrets.py
+secrets/
+*.secret
+*.key
+*.pem
+*.p12
+*.pfx
+api_keys.txt
+passwords.txt
+tokens.txt
+credentials.json
+
+# API Keys
 *.api_key
 config.local.json
