--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,10 +1,14 @@
 # Streamlit Cloud デプロイメント用設定
 # 本ファイルはStreamlit Cloudの「Secrets」セクションに設定してください
+# ⚠️ 注意: この内容は.gitignoreに追加されています（公開されません）
 
-# 統一環境認証パスワード
-BETA_PASSWORD = "ruri2024beta"
-DEVELOPER_PASSWORD = "aiTuberDev2024"
-ADMIN_PASSWORD = "ruriSuperAdmin2024"
+# 統一環境認証パスワード（強力なパスワードに変更してください）
+BETA_PASSWORD = ""
+DEVELOPER_PASSWORD = ""
+ADMIN_PASSWORD = ""
+
+# OpenAI API設定（オプション）
+OPENAI_API_KEY = ""
 
 # デフォルトユーザーレベル (PUBLIC/BETA/DEVELOPER/ADMIN)
 DEFAULT_USER_LEVEL = "PUBLIC"
