--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,10 @@ requests>=2.31.0
 # 型ヒント (Python < 3.10 対応)
 typing-extensions>=4.5.0
 
+# セキュリティ強化用パッケージ
+cryptography>=41.0.0
+bcrypt>=4.0.0
+
 # オプション機能 - デプロイ時にエラーが発生する場合はコメントアウト
 # OpenAI API (AI機能用)
 # openai>=0.28.0
