認証システム簡素化完了 - 単一パスワード認証
 改善内容:
- 4段階認証  シンプル2段階認証（PUBLIC/OWNER）
- 複数パスワード  単一所有者パスワード
- 複雑な権限管理  明確な所有者/一般ユーザー分離

 ユーザビリティ向上:
- 認証フローの簡素化
- パスワード管理の負担軽減
- 直感的なアクセス制御

 セキュリティ維持:
- 暗号化ハッシュ化機能継続
- 機密情報保護システム維持
- 動的設定変更UI対応

 UI改善:
- サイドバー認証インターフェース最適化
- 機能制限表示の明確化
- 所有者モード表示の統一

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -2,15 +2,13 @@
 # 本ファイルはStreamlit Cloudの「Secrets」セクションに設定してください
 # ⚠️ 注意: この内容は.gitignoreに追加されています（公開されません）
 
-# 統一環境認証パスワード（強力なパスワードに変更してください）
-BETA_PASSWORD = ""
-DEVELOPER_PASSWORD = ""
-ADMIN_PASSWORD = ""
+# 所有者認証パスワード（強力なパスワードに変更してください）
+OWNER_PASSWORD = ""
 
 # OpenAI API設定（オプション）
 OPENAI_API_KEY = ""
 
-# デフォルトユーザーレベル (PUBLIC/BETA/DEVELOPER/ADMIN)
+# デフォルトユーザーレベル (PUBLIC/OWNER)
 DEFAULT_USER_LEVEL = "PUBLIC"
 
 # 機能フラグ
