デプロイ設定修正: app.pyパス統一
- Procfile: webui/app.py  app.py
- railway.toml: startCommand更新
- 全デプロイ環境でのパス統一完了

--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@
 builder = "nixpacks"
 
 [deploy]
-startCommand = "streamlit run webui/app.py --server.port=$PORT --server.address=0.0.0.0"
+startCommand = "streamlit run app.py --server.port=$PORT --server.address=0.0.0.0"
 
 [environments.production.variables]
 ENVIRONMENT = "production"
