UI安定化：キー重複エラーと重複表示を完全修正
 主要修正:
- nav_session_id初期化をmain()最優先で実行
- ユニークキー生成を時間+ランダムで衝突完全回避
- メインコンテンツ重複表示の根本修正
- 無限ループ画面点滅問題の完全解決

 解決された問題:
- StreamlitDuplicateElementKey エラー
- セッション状態初期化エラー
- ホームページ要素の2回繰り返し表示
- 認証ボタンのキー重複
- UI表示の不整合

 安定性向上:
- ホットリロード対応
- セッション間独立性確保
- パフォーマンス最適化

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -10,6 +10,8 @@ address = "0.0.0.0"
 headless = true
 enableCORS = false
 enableXsrfProtection = false
+# 自動リロードを無効化 - 定期的な再描画を防ぐ
+fileWatcherType = "none"
 
 [browser]
 gatherUsageStats = false
