APIキー統一管理初期化リファクタリング完了
## 主要改善項目
- APIConfig統一システム実装（環境変数 > .env > Streamlit secrets）
- OpenAIプロバイダー修正（initialize()メソッド完全実装）
- CharacterAI大幅リファクタリング（初期化順序最適化）
- エラーハンドリング強化とセキュリティ向上

## 動作確認済み
- ローカル環境でのWebUI正常起動
- Character AI初期化とプロバイダー選択
- APIキーハードコーディング完全撲滅

次の開発段階（通信ログ機能）のベース版として保存

--- a/ai_provider_config.json
+++ b/ai_provider_config.json
@@ -1,17 +1,17 @@
 {
   "gpt-oss": {
-    "enabled": true,
+    "enabled": false,
     "priority": 1,
     "config": {
       "model": "gpt-oss:20b"
     }
   },
   "openai": {
-    "enabled": false,
-    "priority": 2,
+    "enabled": true,
+    "priority": 1,
     "config": {
       "model": "gpt-3.5-turbo",
-      "api_key": ""
+      "api_key": "YOUR_API_KEY_HERE"
     }
   },
   "huggingface": {
