--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,10 @@ pandas>=2.0.0
 pillow>=10.0.0
 requests>=2.31.0
 
+# AI providers
+openai>=1.0.0
+python-dotenv>=1.0.0
+
 # オプション: 必要に応じてコメントアウト解除
 # opencv-python-headless>=4.8.0
 # plotly>=5.17.0
