--- a/ai_provider_config.json
+++ b/ai_provider_config.json
@@ -10,7 +10,7 @@
     "enabled": true,
     "priority": 1,
     "config": {
-      "model": "gpt-3.5-turbo",
+      "model": "gpt-4o-mini",
       "api_key": "YOUR_API_KEY_HERE"
     }
   },
